# log-processing-exercise

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  process_log.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_process_log.py
