[project]
name = "log-processing-exercise"
version = "0.1.0"
description = "Process a log file line by line with prioritized rules."
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["process_log.py", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
